resolved Footer overflow

--- a/StyleSheets/candy.css
+++ b/StyleSheets/candy.css
@@ -137,12 +137,17 @@ input[type=text] {
 	background-color: rgba(255, 255, 255, 0.43);
 	margin-top: 0.75em; 
 	padding-left: 1em;
+	padding-bottom: 2.5rem
 	float: left;
-	width: 85%;
+	width: 83%;
 	}
 
+/* --------------------------------------------------------*/
+	
+			/* Start SlideShow */
+
 .slideshow-container {
-  max-width: 1000px;
+  max-width: 80%x;
   position: relative;
   margin: auto;
 }
@@ -168,6 +173,8 @@ input[type=text] {
   to {opacity: 1}
 }
 
+			/* End SlideShow */
+
 .sideBarAds {
 
 	background-color: rgba(255, 255, 255, 0.43);
@@ -182,6 +189,7 @@ iframe {
 	width: 78%;
 	height: 600px;
 	}
+
 			/*  End Main Page Content */
 			
 /* --------------------------------------------------------*/
@@ -189,12 +197,13 @@ iframe {
 			/* Start Footer */
 .footer {
 	background-color: rgba(255, 255, 255, 0.43);
-	float: bottom;
-	/*z-index: 1;*/
+	/*float: bottom;
+	z-index: 1;*/
 	position: fixed;
 	left: 0;
 	bottom: 0;
 	width: 100%;
+	height: 3em;
 	}
 	
 .footer ul li {
